<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_suma">


    <TextView
        android:id="@+id/dato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dato"
        android:textSize="15pt" />

    <TextView
        android:id="@+id/relsuma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relsuma"
        android:textSize="15pt" />

    <Button
        android:id="@+id/btndevol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btndevol"
        android:textSize="15pt" />


</LinearLayout>