<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Acticity_resta">

    <TextView
        android:id="@+id/dato2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dato2"
        android:textSize="15pt" />

    <TextView
        android:id="@+id/relresta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relresta"
        android:textSize="15pt" />

    <Button
        android:id="@+id/btnanterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnanterior"
        android:textSize="15pt" />
</LinearLayout>